# ComfyUI-WebUI-Prompt-Bridge-

./: .gitignore  CHANGELOG.md  CODEX_PROJECT_CONTEXT.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  config.local.example.json  nodes.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  performance.yml
.github/workflows/: publish_action.yml
ComfyUI-WebUI-Prompt-Bridge-main/: NOTICE.md  pyproject.toml
ComfyUI-WebUI-Prompt-Bridge-main/data/a1111-sd-webui-tagcomplete/tags/: Tags-zh-full-pack.csv
ComfyUI-WebUI-Prompt-Bridge-main/docs/: release-notes-v0.2.0.md  release-notes-v0.2.1.md  release-notes-v0.2.3.md  release-notes-v0.2.6.md  release-notes-v0.3.1.md  release-notes-v0.3.2.md  release-notes-v0.4.12.md  release-notes-v0.4.14.md  release-notes-v0.4.2.md  release-notes-v0.4.21.md  release-notes-v0.4.23.md  release-notes-v0.4.24.md  release-notes-v0.4.25.md  release-notes-v0.4.6.md
ComfyUI-WebUI-Prompt-Bridge-main/web/: webui_prompt_bridge.js
ComfyUI-WebUI-Prompt-Bridge-main/workflows/: tutorial-minimal-xl-webui-prompt-bridge.json  xl-img2img-webui-prompt-bridge.json
docs/: release-notes-v0.1.8.md  release-notes-v0.1.9.md  release-notes-v0.2.2.md  release-notes-v0.2.4.md  release-notes-v0.3.4.md  release-notes-v0.4.0.md  release-notes-v0.4.13.md  release-notes-v0.4.15.md  release-notes-v0.4.16.md  release-notes-v0.4.18.md  release-notes-v0.4.2.md  release-notes-v0.4.20.md  release-notes-v0.4.22.md  release-notes-v0.4.26.md  release-notes-v0.4.28.md  release-notes-v0.4.3.md  release-notes-v0.4.4.md  release-notes-v0.4.5.md  release-notes-v0.4.7.md  release-notes-v0.4.8.md  release-notes-v0.4.9.md  tutorial-minimal-workflows.md
tests/: test_prompt_library.py
tools/: verify_frontend_compat.mjs
web/: webui_prompt_bridge.js
workflows/: anima-webui-prompt-bridge.json  tutorial-minimal-anima-webui-prompt-bridge.json  tutorial-minimal-xl-webui-prompt-bridge.json  xl-img2img-webui-prompt-bridge.json
