[project]
name = "comfyui-webui-prompt-bridge"
description = "ComfyUI 的 WebUI 式提示词工作台：提示词编辑、LoRA 浏览加载、模型切换、中文翻译和布局助手。"
version = "0.4.19"
license = { file = "LICENSE" }
dependencies = [
    "pyyaml",
    "safetensors",
    "requests",
    "PyExecJS",
    "lxml",
    "tqdm",
    "pathos",
    "cryptography",
    "chardet"
]

requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "dianfangsihuo" }
]
keywords = [
    "comfyui",
    "prompt",
    "webui",
    "autocomplete",
    "translation",
    "lora",
    "anima"
]

[project.urls]
Repository = "https://github.com/dianfangsihuo/ComfyUI-WebUI-Prompt-Bridge"
Issues = "https://github.com/dianfangsihuo/ComfyUI-WebUI-Prompt-Bridge/issues"

[project.optional-dependencies]
cloud-translation = [
    "openai",
    "boto3",
    "aliyun-python-sdk-core",
    "aliyun-python-sdk-alimt"
]

[tool.comfy]
PublisherId = "dianfangsihuo"
DisplayName = "ComfyUI WebUI Prompt Bridge"
Icon = "https://raw.githubusercontent.com/dianfangsihuo/ComfyUI-WebUI-Prompt-Bridge/main/docs/images/webui-prompt-bridge-workflow.png"
Banner = "https://raw.githubusercontent.com/dianfangsihuo/ComfyUI-WebUI-Prompt-Bridge/main/docs/images/webui-prompt-bridge-workflow.png"
