[project]
name = "comfyui-webui-prompt-bridge"
description = "ComfyUI 的 WebUI 式提示词工作台：管理提示词、LoRA、模型切换、区域控制，并可接管尺寸、Steps 和 Seed。"
version = "0.4.20"
license = { file = "LICENSE" }
dependencies = [
    "pyyaml",
    "safetensors",
    "requests",
    "PyExecJS",
    "lxml",
    "tqdm",
    "pathos",
    "cryptography",
    "chardet"
]

requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "dianfangsihuo" }
]
keywords = [
    "comfyui",
    "prompt",
    "webui",
    "autocomplete",
    "translation",
    "lora",
    "anima"
]

[project.urls]
Repository = "https://github.com/dianfangsihuo/ComfyUI-WebUI-Prompt-Bridge"
Issues = "https://github.com/dianfangsihuo/ComfyUI-WebUI-Prompt-Bridge/issues"

[project.optional-dependencies]
cloud-translation = [
    "openai",
    "boto3",
    "aliyun-python-sdk-core",
    "aliyun-python-sdk-alimt"
]

[tool.comfy]
PublisherId = "dianfangsihuo"
DisplayName = "ComfyUI WebUI Prompt Bridge"
Icon = "https://raw.githubusercontent.com/dianfangsihuo/ComfyUI-WebUI-Prompt-Bridge/main/docs/images/webui-prompt-bridge-workflow.png"
Banner = "https://raw.githubusercontent.com/dianfangsihuo/ComfyUI-WebUI-Prompt-Bridge/main/docs/images/webui-prompt-bridge-workflow.png"
