[project]
name = "comfyui-webui-prompt-bridge"
description = "ComfyUI 的 WebUI 式提示词工作台：中文提示词、Tag 编辑、LoRA 管理、模型切换、图生图和生成参数控制。"
version = "0.4.24"
license = { file = "LICENSE" }
dependencies = [
    "pyyaml",
    "safetensors",
    "requests",
    "PyExecJS",
    "lxml",
    "tqdm",
    "pathos",
    "cryptography",
    "chardet"
]

requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "dianfangsihuo" }
]
keywords = [
    "comfyui",
    "prompt",
    "webui",
    "autocomplete",
    "translation",
    "lora",
    "anima"
]

[project.urls]
Repository = "https://github.com/dianfangsihuo/ComfyUI-WebUI-Prompt-Bridge"
Issues = "https://github.com/dianfangsihuo/ComfyUI-WebUI-Prompt-Bridge/issues"

[project.optional-dependencies]
cloud-translation = [
    "openai",
    "boto3",
    "aliyun-python-sdk-core",
    "aliyun-python-sdk-alimt"
]

[tool.comfy]
PublisherId = "dianfangsihuo"
DisplayName = "ComfyUI WebUI Prompt Bridge"
Icon = "https://raw.githubusercontent.com/dianfangsihuo/ComfyUI-WebUI-Prompt-Bridge/main/docs/images/webui-prompt-bridge-workflow.png"
Banner = "https://raw.githubusercontent.com/dianfangsihuo/ComfyUI-WebUI-Prompt-Bridge/main/docs/images/webui-prompt-bridge-workflow.png"
