[project]
name = "comfyui-webui-prompt-bridge"
description = "在 ComfyUI 里获得 WebUI 式提示词体验：中文翻译、Tag 自动补全、LoRA 管理、提示词市场和高级模块接入。"
version = "0.4.25"
license = { file = "LICENSE" }
dependencies = [
    "pyyaml",
    "safetensors",
    "requests",
    "PyExecJS",
    "lxml",
    "tqdm",
    "pathos",
    "cryptography",
    "chardet"
]

requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "dianfangsihuo" }
]
keywords = [
    "comfyui",
    "prompt",
    "webui",
    "autocomplete",
    "translation",
    "lora",
    "anima"
]

[project.urls]
Repository = "https://github.com/dianfangsihuo/ComfyUI-WebUI-Prompt-Bridge"
Issues = "https://github.com/dianfangsihuo/ComfyUI-WebUI-Prompt-Bridge/issues"

[project.optional-dependencies]
cloud-translation = [
    "openai",
    "boto3",
    "aliyun-python-sdk-core",
    "aliyun-python-sdk-alimt"
]

[tool.comfy]
PublisherId = "dianfangsihuo"
DisplayName = "ComfyUI WebUI Prompt Bridge"
Icon = "https://raw.githubusercontent.com/dianfangsihuo/ComfyUI-WebUI-Prompt-Bridge/main/docs/images/webui-prompt-bridge-workflow.png"
Banner = "https://raw.githubusercontent.com/dianfangsihuo/ComfyUI-WebUI-Prompt-Bridge/main/docs/images/webui-prompt-bridge-workflow.png"
